Fixed string and list highlighting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,10 +37,10 @@
                 { },
             ]
         },
-        "(\\bstring)": {
+        "(\\bstring\\b)": {
             "color": "#56b6c2"
         },
-        "(\\blist)": {
+        "(\\blist\\b)": {
             "color": "#56b6c2"
         },
         "(\\[)(.+?)(\\])": {
