Updated project layout Updated unit test framework Updated bitmasks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -98,10 +98,10 @@
         "(\\bdictionary\\b)": {
             "color": "#56b6c2"
         },
-        "([^:\\s<\\(\\[\\.&\\*]*)(::)": {
+        "([^:\\s<\\(\\[\\.&\\*!~]*)(::)": {
             "decorations": [
                 { "color": "#56b6c2", "textDecoration": "underline" },
-                { "color": "#e06c75"" },
+                { "color": "#e06c75" },
             ]
         },
         "(\\[)(.+?)(\\])": {
