Updated vscode settings

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,8 @@
                 "trace": true
             },
             "cwd": "${workspaceRoot}\\build",
-            "args": ["-af", "params\\gfx-test"]
+            // "args": ["-af", "params\\gfx-test"]
+            "args": []
             // "visualizerFile": "${workspaceRoot}/my.natvis",
             // "showDisplayString": true
         }
